# abakos

./: .gitattributes  .gitignore  LICENSE  NOTICE  PROVIDER_TUNNEL_DEPLOYMENT.md  README.md
.cursor/rules/: writing-style.mdc
.github/workflows/: desktop-release.yml
api/: README.md
chain/: go.mod  go.sum
chain/app/: ante.go  app.go  app_configure.go  config.go  evm.go  mac.go  modules.go
cosmos-sdk/: go.mod  go.sum
desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  miner.rs  provider.rs
dex/: .gitignore  deploy-uniswap.js  deploy.js  deployed-uniswap.json  deployed.json  fund-buyback.js  package.json  test-swap.js  test-uniswap-swap.js
docs/: 18-sandbox-status-and-next-steps.md  fee-model.md  litepaper.md  whitepaper.md
marketplace/: README.md
pool-proxy/: .gitignore  proxy.py
provider-agent/: agent.py
provider-compute/: .gitignore  ABA-ONLY.md  MAINNET-PARITY.md  QUICKSTART.md  README.md  install.sh  pricing.sh  provider-register.local.yaml  provider-register.yaml  provider.yaml
scripts/: build-chain-local.sh  build-chain-wsl.sh  build-evm-probe.sh  evm-genesis-inspect.sh  evm-local-run.sh  evm-local-verify.sh  genesis-run-wsl.sh  inspect-genesis.sh  verify-chain-wsl.sh  verify-evmrpc.sh  verify-gas.sh
site/: README.md  abakos-waitlist.service  package-lock.json  package.json  playwright.config.mjs  waitlist_service.py
(+198 files in other folders)
